Bug 290396 - sieve filters are not listed
Summary: sieve filters are not listed
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: sieve (other bugs)
Version First Reported In: 4.9.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-02 12:40 UTC by Martin Fahrendorf
Modified: 2013-05-31 17:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments
Fix Base64 decoding for SASL in libksieve (886 bytes, patch)
2012-07-19 20:52 UTC, Paul Zirnik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Fahrendorf 2012-01-02 12:40:49 UTC
Version:           4.7 (using KDE 4.7.3) 
OS:                Linux

Sieve filters on my imap server are not listed in kmail2. If I use dolphin my sieve filters are listed. (konqueror failed to handle sieve protocol by the way) I use cyrus imap/sieve Version 2.3.7.

Reproducible: Always

Steps to Reproduce:
open manage sieve scripts dialog from within kmail2

Actual Results:  
can not fetch sieve script list

Expected Results:  
list of sieve scripts

TLS is enabled. kmail1 had no such problems. Authentication is done via kerberos. 

According to my sieve log the connection was established and ended without an error but there was no user logged in. If I use dolphin I can see the line where sieve said that user is logged in.
Comment 1 Laurent Montel 2012-04-16 07:14:21 UTC
still valid in 4.8.2 ?
Comment 2 Martin Fahrendorf 2012-04-21 08:26:56 UTC
Am Montag, 16. April 2012, 07:14:21 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=290396
> 
> Laurent Montel <montel@kde.org> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
> CC|                            |montel@kde.org
> 
> --- Comment #1 from Laurent Montel <montel@kde.org> ---
> still valid in 4.8.2 ?

Yes, this is still valid vor 4.8.2. The sieve server is listed, but no script 
(there is one). Konqueror still says that it is not possible to access files 
with this protocol and dolphin simply shows the sieve script file (same is true 
for file open dialogue in kwrite).
Comment 3 Martin Fahrendorf 2012-04-24 15:18:01 UTC
It has to do with kerberos GSSAPI authentication. If I switch to plain text 
auth sieve is working as expected.
Comment 4 Paul Zirnik 2012-07-15 14:30:02 UTC
I can confirm the issue even with kmail-4.8.4 (opensuse KDE 48 Release repo)

In strace i see 
- kmail connect to sieve server
- kmail negotiate TLS with sieve server
- kmail access my kerberos ticket cache  -> the ticket is there (see below)
- kmail send something to sieve
- kmail get something back
- kmail logs this error 

Jul 15 15:55:52 speedy kmail: GSSAPI Error: Invalid token was supplied (Unknown error)

However connection to sieve via "sieveshell" with kerberos works perfectly, so it is not a kerberos issue. Must be kmail related ..

user@speedy:~> sieveshell manitou.xxxxx.net
connecting to manitou.xxxxx.net
> list
mysieve  <- active script
> quit
user@speedy:~> 

Btw.

connection to imap with kerberos (cyrus which also is used as sieve server) works with kmail
connection to smtp with kerberos works with kmail

Only a guess, but maybe kmail uses the imap ticket and not the sieve ticket ?

Please let me know if i can help with logs or something.
Comment 5 Paul Zirnik 2012-07-19 20:52:02 UTC
Created attachment 72638 [details]
Fix Base64 decoding for SASL in libksieve

This patch will fix the issue. The received challenge string is sent without Base64 decoding to SASL library, which is wrong.
Comment 6 Laurent Montel 2012-07-20 10:39:18 UTC
Ok this patch seems good. I will apply it in 4.8.5
I don't know SASL but I looked at other apps which uses SASL and it uses same code as your patch.
So for me it's ok.
I can't test but you tested it.
So for me it's enough.

Thanks for the patch!
Regards
Comment 7 Allen Winter 2012-07-20 10:45:20 UTC
Git commit 0ddf2586eff85329120069765f0d6678cc0d1afd by Allen Winter.
Committed on 20/07/2012 at 12:44.
Pushed by winterz into branch 'master'.

fix sieve filters are not listed
Thanks for the patch Paul!
FIXED-IN: 4.8.5
MERGE: 4.8,4.9

M  +7    -1    libksieve/kmanagesieve/session.cpp

http://commits.kde.org/kdepim/0ddf2586eff85329120069765f0d6678cc0d1afd
Comment 8 Allen Winter 2012-07-20 10:45:57 UTC
Git commit e435bfb2b43be20f4e7f52222fcb6af36fb37b61 by Allen Winter.
Committed on 20/07/2012 at 12:44.
Pushed by winterz into branch 'KDE/4.8'.

fix sieve filters are not listed
Thanks for the patch Paul!
FIXED-IN: 4.8.5
MERGE: 4.8,4.9
(cherry picked from commit 0ddf2586eff85329120069765f0d6678cc0d1afd)

M  +7    -1    libksieve/kmanagesieve/session.cpp

http://commits.kde.org/kdepim/e435bfb2b43be20f4e7f52222fcb6af36fb37b61
Comment 9 Allen Winter 2012-07-20 10:46:17 UTC
Git commit 4ac6c1d138b656bc0e907b41e0b51dbb79866018 by Allen Winter.
Committed on 20/07/2012 at 12:44.
Pushed by winterz into branch 'KDE/4.9'.

fix sieve filters are not listed
Thanks for the patch Paul!
FIXED-IN: 4.8.5
MERGE: 4.8,4.9
(cherry picked from commit 0ddf2586eff85329120069765f0d6678cc0d1afd)

M  +7    -1    libksieve/kmanagesieve/session.cpp

http://commits.kde.org/kdepim/4ac6c1d138b656bc0e907b41e0b51dbb79866018
Comment 10 dev 2012-10-03 12:30:46 UTC
I still can not edit my sieve scripts in kmail when using kerberos for authentication. I've tried it with KDE 4.8.5 and KDE 4.9.1. I use dovecot on the serverside. When i open the sieve dialog in kmail, kmail fails to connect to the server. Dovcot prints out the following message:

Info: gssapi(me@MY.REALM,192.168.X.Y): While final negotiation: gss_unwrap: Invalid token was supplied
Comment 11 Myriam Schweingruber 2012-10-04 12:03:07 UTC
Did you try erasing the configuration files?
Comment 12 dev 2012-10-04 14:56:27 UTC
I've deleted all akonadi related config files i could find a and re created the imap/sieve account after i've upgraded to 4.8.5. I've also tried this in KDE 4.9.1 which i started from a kubuntu live ISO in Virtual Box. The error message dovecot produces is exactly the same (and the result in kmail "Die Liste der Skripte kann nicht abgeholt werden.", i would translate it with: "the list of scripts could not be retrived", too).
Comment 13 Myriam Schweingruber 2012-10-06 14:21:30 UTC
Thank you for the fast feedback, reopening based on that information.
Comment 14 Martin Fahrendorf 2012-10-07 12:06:15 UTC
Am 06.10.2012 16:21, schrieb Myriam Schweingruber:
> https://bugs.kde.org/show_bug.cgi?id=290396
> 
> Myriam Schweingruber <myriam@kde.org> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|RESOLVED                    |REOPENED
>             Version|4.7                         |4.9.1
>          Resolution|WAITINGFORINFO              |---
>      Ever confirmed|0                           |1
> 
> --- Comment #13 from Myriam Schweingruber <myriam@kde.org> ---
> Thank you for the fast feedback, reopening based on that information.
> 
At least for me with kmail/akonadi from KDE 4.9.2 it is solved (with
cyrus imap and sieve).
Comment 15 Paul Zirnik 2012-10-08 13:22:19 UTC
I can't confirm that it is working with KDE 4.9.2.

Just updated to opensuse (12.2) KDE 4.9 repository (kdepim4-4.9.2-356.1.x86_64) and the whole GSSAPI stack looks like to be broken. I even can't get mails from my cyrus-imap server. Had to switch to non kerberos authentication to get mail working at all :(
Comment 16 Laurent Montel 2013-05-30 11:57:39 UTC
Still doesn't work ?
" I even can't get mails from my cyrus-imap server" it's an other problem
Comment 17 Martin Fahrendorf 2013-05-31 14:51:10 UTC
For me it is working now from kmail2.
Comment 18 Martin Fahrendorf 2013-05-31 14:54:37 UTC
OK, forgot to mention my version: kmail2 from standard fedora 18 (4.10.3).
Comment 19 Laurent Montel 2013-05-31 17:08:03 UTC
ok I close it