fix sieve filters are not listed Thanks for the patch Paul!

BUG: 290396
FIXED-IN: 4.8.5
MERGE: 4.8,4.9
(cherry picked from commit 0ddf2586eff85329120069765f0d6678cc0d1afd)